--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -13,6 +13,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "93a8bb38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "80abb985",
    "metadata": {},
@@ -22,12 +32,406 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "52b39665",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Usage Frequency</th>\n",
+       "      <th>Support Calls</th>\n",
+       "      <th>Payment Delay</th>\n",
+       "      <th>Subscription Type</th>\n",
+       "      <th>Contract Length</th>\n",
+       "      <th>Total Spend</th>\n",
+       "      <th>Last Interaction</th>\n",
+       "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>932.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>557.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Quarterly</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>617.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerID   Age  Gender  Tenure  Usage Frequency  Support Calls  \\\n",
+       "0         2.0  30.0  Female    39.0             14.0            5.0   \n",
+       "1         3.0  65.0  Female    49.0              1.0           10.0   \n",
+       "2         4.0  55.0  Female    14.0              4.0            6.0   \n",
+       "3         5.0  58.0    Male    38.0             21.0            7.0   \n",
+       "4         6.0  23.0    Male    32.0             20.0            5.0   \n",
+       "\n",
+       "   Payment Delay Subscription Type Contract Length  Total Spend  \\\n",
+       "0           18.0          Standard          Annual        932.0   \n",
+       "1            8.0             Basic         Monthly        557.0   \n",
+       "2           18.0             Basic       Quarterly        185.0   \n",
+       "3            7.0          Standard         Monthly        396.0   \n",
+       "4            8.0             Basic         Monthly        617.0   \n",
+       "\n",
+       "   Last Interaction  Churn  \n",
+       "0              17.0    1.0  \n",
+       "1               6.0    1.0  \n",
+       "2               3.0    1.0  \n",
+       "3              29.0    1.0  \n",
+       "4              20.0    1.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# code"
+    "base_df = pd.read_csv(\"../data/lab2_2025_dataset.csv\")\n",
+    "base_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8746e182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 440833 entries, 0 to 440832\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count   Dtype  \n",
+      "---  ------             --------------   -----  \n",
+      " 0   CustomerID         440832 non-null  float64\n",
+      " 1   Age                440832 non-null  float64\n",
+      " 2   Gender             440832 non-null  object \n",
+      " 3   Tenure             440832 non-null  float64\n",
+      " 4   Usage Frequency    440832 non-null  float64\n",
+      " 5   Support Calls      440832 non-null  float64\n",
+      " 6   Payment Delay      440832 non-null  float64\n",
+      " 7   Subscription Type  440832 non-null  object \n",
+      " 8   Contract Length    440832 non-null  object \n",
+      " 9   Total Spend        440832 non-null  float64\n",
+      " 10  Last Interaction   440832 non-null  float64\n",
+      " 11  Churn              440832 non-null  float64\n",
+      "dtypes: float64(9), object(3)\n",
+      "memory usage: 40.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "71eb6885",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Usage Frequency</th>\n",
+       "      <th>Support Calls</th>\n",
+       "      <th>Payment Delay</th>\n",
+       "      <th>Total Spend</th>\n",
+       "      <th>Last Interaction</th>\n",
+       "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "      <td>440832.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>225398.667955</td>\n",
+       "      <td>39.373153</td>\n",
+       "      <td>31.256336</td>\n",
+       "      <td>15.807494</td>\n",
+       "      <td>3.604437</td>\n",
+       "      <td>12.965722</td>\n",
+       "      <td>631.616223</td>\n",
+       "      <td>14.480868</td>\n",
+       "      <td>0.567107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>129531.918550</td>\n",
+       "      <td>12.442369</td>\n",
+       "      <td>17.255727</td>\n",
+       "      <td>8.586242</td>\n",
+       "      <td>3.070218</td>\n",
+       "      <td>8.258063</td>\n",
+       "      <td>240.803001</td>\n",
+       "      <td>8.596208</td>\n",
+       "      <td>0.495477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>113621.750000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>480.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>226125.500000</td>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>661.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>337739.250000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>830.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>449999.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          CustomerID            Age         Tenure  Usage Frequency  \\\n",
+       "count  440832.000000  440832.000000  440832.000000    440832.000000   \n",
+       "mean   225398.667955      39.373153      31.256336        15.807494   \n",
+       "std    129531.918550      12.442369      17.255727         8.586242   \n",
+       "min         2.000000      18.000000       1.000000         1.000000   \n",
+       "25%    113621.750000      29.000000      16.000000         9.000000   \n",
+       "50%    226125.500000      39.000000      32.000000        16.000000   \n",
+       "75%    337739.250000      48.000000      46.000000        23.000000   \n",
+       "max    449999.000000      65.000000      60.000000        30.000000   \n",
+       "\n",
+       "       Support Calls  Payment Delay    Total Spend  Last Interaction  \\\n",
+       "count  440832.000000  440832.000000  440832.000000     440832.000000   \n",
+       "mean        3.604437      12.965722     631.616223         14.480868   \n",
+       "std         3.070218       8.258063     240.803001          8.596208   \n",
+       "min         0.000000       0.000000     100.000000          1.000000   \n",
+       "25%         1.000000       6.000000     480.000000          7.000000   \n",
+       "50%         3.000000      12.000000     661.000000         14.000000   \n",
+       "75%         6.000000      19.000000     830.000000         22.000000   \n",
+       "max        10.000000      30.000000    1000.000000         30.000000   \n",
+       "\n",
+       "               Churn  \n",
+       "count  440832.000000  \n",
+       "mean        0.567107  \n",
+       "std         0.495477  \n",
+       "min         0.000000  \n",
+       "25%         0.000000  \n",
+       "50%         1.000000  \n",
+       "75%         1.000000  \n",
+       "max         1.000000  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2606009d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Subscription Type\n",
+       " Standard    149128\n",
+       " Premium     148678\n",
+       " Basic       143026\n",
+       " Name: count, dtype: int64,\n",
+       " Gender\n",
+       " Male      250252\n",
+       " Female    190580\n",
+       " Name: count, dtype: int64,\n",
+       " Contract Length\n",
+       " Annual       177198\n",
+       " Quarterly    176530\n",
+       " Monthly       87104\n",
+       " Name: count, dtype: int64)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_df[\"Subscription Type\"].value_counts(), base_df[\"Gender\"].value_counts(), base_df[\"Contract Length\"].value_counts()"
    ]
   },
   {
@@ -144,7 +548,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
