Saving training status

--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -708,6 +708,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f98c7701",
+   "metadata": {},
+   "source": [
+    "Performance ROC AUC 0.9999590099979307 obtida com os hiperparâmetros da DecisionTree: {'criterion': 'entropy', 'max_depth': 12, 'min_samples_leaf': 10}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6992daab",
    "metadata": {},
    "source": [
@@ -776,6 +784,14 @@
     "\n",
     "joblib.dump(nn_mlp_pipeline, \"nn_mlp_pipeline.joblib\")\n",
     "print(f\"Modelo nn_mlp_pipeline salvo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "215a701d",
+   "metadata": {},
+   "source": [
+    "Performance ROC AUC 0.9999910083254735 obtida com os hiperparâmetros da Rede Neural MLP: {'alpha': 0.0005, 'hidden_layer_sizes': (100, 100)}\n"
    ]
   },
   {
@@ -851,6 +867,14 @@
     "\n",
     "joblib.dump(random_forest_pipeline, \"random_forest_pipeline.joblib\")\n",
     "print(f\"Modelo random_forest_pipeline salvo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46989285",
+   "metadata": {},
+   "source": [
+    "Performance ROC AUC 0.9999513653287119 obtida com os hiperparâmetros da Random Forest: {'max_depth': 12, 'max_features': 'sqrt', 'min_samples_leaf': 5, 'n_estimators': 200}\n"
    ]
   },
   {
@@ -1019,6 +1043,20 @@
     "\n",
     "champion_model_name = max(validation_score, key=validation_score.get)\n",
     "print(f\"Modelo escolhido: {champion_model_name} com acurácia de {validation_score[champion_model_name]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b8c941c",
+   "metadata": {},
+   "source": [
+    "Resumo Comparativo das Métricas de Validação\n",
+    "              Acurácia  Precisão   Recall     Kappa\n",
+    "DecisionTree  0.999501  0.999980  0.99914  0.998984\n",
+    "MLP           0.999388  0.999840  0.99908  0.998753\n",
+    "RandomForest  0.993127  0.999899  0.98798  0.986027\n",
+    "{'DecisionTree': 0.9995009470663627, 'MLP': 0.9993875259450815, 'RandomForest': 0.993126680050359}\n",
+    "Modelo escolhido: DecisionTree com acurácia de 0.9995009470663627"
    ]
   },
   {
@@ -1551,6 +1589,14 @@
     "final_accuracy = accuracy_score(y_test, y_pred_final)\n",
     "\n",
     "print(f\"Acurácia Final do Modelo no Conjunto de Teste: {final_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2516c29b",
+   "metadata": {},
+   "source": [
+    "Acurácia Final do Modelo no Conjunto de Teste: 0.9996\n"
    ]
   },
   {
